--- a/Day_1/desc_stats_and_viz.qmd
+++ b/Day_1/desc_stats_and_viz.qmd
@@ -1,5 +1,9 @@
 ---
-title: "Day_1:Desc_stats_and_viz"
+title: "Day 1:Descriptive Stats and Visualizations"
 ---
+
+Introduction \<- Put Eric's intro here.
+
+Favstats()
 
 [Histograms](./histograms.html)
