--- a/Resources.qmd
+++ b/Resources.qmd
@@ -32,35 +32,35 @@ execute:
 
 ## The link below has a list of stats books produced by Project Mosaic.
 
-[![](https://avatars.githubusercontent.com/u/11564185?s=200&v=4){width="190"}](https://www.mosaic-web.org/mosaic-books.html)
+[![](https://avatars.githubusercontent.com/u/11564185?s=200&v=4){fig-align="center" width="190"}](https://www.mosaic-web.org/mosaic-books.html)
 
 ## OpenIntro Statistics
 
 This is the text Eric and Nic currently use, there is no explicit mention of R.
 
-[![](https://d2sofvawe08yqg.cloudfront.net/os/s_hero?1620484636){width="200"}](https://www.openintro.org/book/os/)
+[![](https://d2sofvawe08yqg.cloudfront.net/os/s_hero?1620484636){fig-align="center" width="200"}](https://www.openintro.org/book/os/)
 
 ## Modern Dive
 
 Modern Dive is a Statistics Text with Data Science Flavor. It relies heavily on the tidyverse.
 
-[![](images/ModernDive.png){width="200"}](https://moderndive.com/index.html)
+[![](images/ModernDive.png){fig-align="center" width="200"}](https://moderndive.com/index.html)
 
 ## Introduction to Modern Statistics.
 
 IMS teaches Statistics with the tidyverse.
 
-[![](https://d2sofvawe08yqg.cloudfront.net/imstat/s_hero?1624230565){width="200"}](https://moderndive.com/index.html)
+[![](https://d2sofvawe08yqg.cloudfront.net/imstat/s_hero?1624230565){fig-align="center" width="200"}](https://moderndive.com/index.html)
 
 # **Cheatsheets:**
 
 ## Mosaic Cheat Sheet
 
-[![](images/mosaic-screenshot.png){width="200"}](https://github.com/mlaviolet/Mosaic-cheatsheets/blob/master/mosaic-cheatsheet-gf.pdf)
+[![](images/mosaic-screenshot.png){fig-align="center" width="200"}](https://github.com/mlaviolet/Mosaic-cheatsheets/blob/master/mosaic-cheatsheet-gf.pdf)
 
 ## MTH 142: Intro to Stats Cheat Sheet
 
-[![](images/MTH142-screenshot.png){width="200"}](https://github.com/mlaviolet/Mosaic-cheatsheets/blob/master/mosaic-cheatsheet-gf.pdf)
+[![](images/MTH142-screenshot.png){fig-align="center" width="200"}](https://github.com/mlaviolet/Mosaic-cheatsheets/blob/master/mosaic-cheatsheet-gf.pdf)
 
 # More toward Data Science
 
@@ -70,27 +70,27 @@ IMS teaches Statistics with the tidyverse.
 
 This is the text Nic has used to teach MTH 190: Intro to Data Science
 
-![](https://mdsr-book.github.io/mdsr2e/gfx/mdsr2e_cover.png){width="200"}
+![](https://mdsr-book.github.io/mdsr2e/gfx/mdsr2e_cover.png){fig-align="center" width="200"}
 
 ## Data Science in a box
 
-![](images/dsbox.png){width="200"}
+![](images/dsbox.png){fig-align="center" width="200"}
 
 ## RMarkdown Cheat sheet
 
-[![](images/rmarkdown.png){fig-align="left" width="200"}](https://raw.githubusercontent.com/rstudio/cheatsheets/main/rmarkdown.pdf)
+[![](images/rmarkdown.png){fig-align="center" width="200"}](https://raw.githubusercontent.com/rstudio/cheatsheets/main/rmarkdown.pdf)
 
 ## Data Visualization: [ggplot2](https://raw.githubusercontent.com/rstudio/cheatsheets/main/data-visualization.pdf)
 
-[![](images/ggplot2.png){fig-align="left" width="200"}](https://raw.githubusercontent.com/rstudio/cheatsheets/main/data-visualization.pdf)
+[![](images/ggplot2.png){fig-align="center" width="200"}](https://raw.githubusercontent.com/rstudio/cheatsheets/main/data-visualization.pdf)
 
 ## Data transformation: dplyr
 
-[![](images/dplyr.png){fig-align="left" width="200"}](https://raw.githubusercontent.com/rstudio/cheatsheets/main/data-transformation.pdf)
+[![](images/dplyr.png){fig-align="center" width="200"}](https://raw.githubusercontent.com/rstudio/cheatsheets/main/data-transformation.pdf)
 
 ## Data Import: tidyr
 
-[![](images/tidyr.png){fig-align="left" width="200"}](https://posit.co/wp-content/uploads/2022/10/tidyr.pdf)
+[![](images/tidyr.png){fig-align="center" width="200"}](https://posit.co/wp-content/uploads/2022/10/tidyr.pdf)
 
 ## Style Guide
 
