--- a/index.qmd
+++ b/index.qmd
@@ -4,6 +4,8 @@ title: "R workshop"
 
 # Information on Workshop
 
+# [To bring to the workshop](./Day_1/to_do.html)
+
 # [Day 1: Descriptive Statistics and Visualizations](./Day_1/desc_stats_and_viz.html)
 
 # Day 2: Probability and Inference
