--- a/Day_1/desc_stats_and_viz.qmd
+++ b/Day_1/desc_stats_and_viz.qmd
@@ -2,7 +2,7 @@
 title: "Day 1:Descriptive Stats and Visualizations"
 ---
 
-Introduction \<- Put Eric's intro here.
+[Introduction](./Presentation1.pdf)\<- Put Eric's intro here.
 
 Favstats()
 
