--- a/index.qmd
+++ b/index.qmd
@@ -4,9 +4,9 @@ title: "R workshop"
 
 # Information on Workshop
 
-# [To bring to the workshop](./Day_1/to_do.html)
+# [To bring to the workshop](./Day_1/to_do.html){target="_blank"}
 
-# [Day 1: Descriptive Statistics and Visualizations](./Day_1/day_1_desc_stats_and_viz.html)
+# [Day 1: Descriptive Statistics and Visualizations](./Day_1/day_1_desc_stats_and_viz.html){target="_blank"}
 
 # Day 2: Probability and Inference
 
