--- a/Resources.qmd
+++ b/Resources.qmd
@@ -19,13 +19,13 @@ execute:
 
 # Common Errors
 
-## [6 fixes to common issues](https://docs.google.com/document/d/1P7IyZ4On9OlrCOhygFxjC7XhQqyw8OludwChz-uFd_o/edit)
+## [6 fixes to common issues](https://docs.google.com/document/d/1P7IyZ4On9OlrCOhygFxjC7XhQqyw8OludwChz-uFd_o/edit){target="_blank"}
 
-## [Tips and Tricks](https://moderndive.com/C-appendixC.html)
+## [Tips and Tricks](https://moderndive.com/C-appendixC.html){target="_blank"}
 
 ------------------------------------------------------------------------
 
-## [R Colors](http://www.stat.columbia.edu/~tzheng/files/Rcolor.pdf)
+## [R Colors](http://www.stat.columbia.edu/~tzheng/files/Rcolor.pdf){target="_blank"}
 
 ------------------------------------------------------------------------
 
@@ -33,35 +33,35 @@ execute:
 
 ## The link below has a list of stats books produced by Project Mosaic.
 
-[![](https://avatars.githubusercontent.com/u/11564185?s=200&v=4){fig-align="center" width="190"}](https://www.mosaic-web.org/mosaic-books.html)
+[![](https://avatars.githubusercontent.com/u/11564185?s=200&v=4){fig-align="center" width="190"}](https://www.mosaic-web.org/mosaic-books.html){target="_blank"}
 
 ## OpenIntro Statistics
 
 This is the text Eric and Nic currently use, there is no explicit mention of R.
 
-[![](https://d2sofvawe08yqg.cloudfront.net/os/s_hero?1620484636){fig-align="center" width="200"}](https://www.openintro.org/book/os/)
+[![](https://d2sofvawe08yqg.cloudfront.net/os/s_hero?1620484636){fig-align="center" width="200"}](https://www.openintro.org/book/os/){target="_blank"}
 
 ## Modern Dive
 
 Modern Dive is a Statistics Text with Data Science Flavor. It relies heavily on the tidyverse.
 
-[![](images/ModernDive.png){fig-align="center" width="200"}](https://moderndive.com/index.html)
+[![](images/ModernDive.png){fig-align="center" width="200"}](https://moderndive.com/index.html){target="_blank"}
 
 ## Introduction to Modern Statistics.
 
 IMS teaches Statistics with the tidyverse.
 
-[![](https://d2sofvawe08yqg.cloudfront.net/imstat/s_hero?1624230565){fig-align="center" width="200"}](https://moderndive.com/index.html)
+[![](https://d2sofvawe08yqg.cloudfront.net/imstat/s_hero?1624230565){fig-align="center" width="200"}](https://moderndive.com/index.html){target="_blank"}
 
 # **Cheatsheets:**
 
 ## Mosaic Cheat Sheet
 
-[![](images/mosaic-screenshot.png){fig-align="center" width="200"}](https://github.com/mlaviolet/Mosaic-cheatsheets/blob/master/mosaic-cheatsheet-gf.pdf)
+[![](images/mosaic-screenshot.png){fig-align="center" width="200"}](https://github.com/mlaviolet/Mosaic-cheatsheets/blob/master/mosaic-cheatsheet-gf.pdf){target="_blank"}
 
 ## MTH 142: Intro to Stats Cheat Sheet
 
-[![](images/MTH142-screenshot.png){fig-align="center" width="200"}](./images/MTH-142-CheatSheet-v9.pdf)
+[![](images/MTH142-screenshot.png){fig-align="center" width="200"}](./images/MTH-142-CheatSheet-v9.pdf){target="_blank"}
 
 # More toward Data Science
 
@@ -71,28 +71,28 @@ IMS teaches Statistics with the tidyverse.
 
 This is the text Nic has used to teach MTH 190: Intro to Data Science
 
-![](https://mdsr-book.github.io/mdsr2e/gfx/mdsr2e_cover.png){fig-align="center" width="200"}
+![](https://mdsr-book.github.io/mdsr2e/gfx/mdsr2e_cover.png){fig-align="center" width="200"}{target="_blank"}
 
 ## Data Science in a box
 
-![](images/dsbox.png){fig-align="center" width="200"}
+![](images/dsbox.png){fig-align="center" width="200"}{target="_blank"}
 
 ## RMarkdown Cheat sheet
 
-[![](images/rmarkdown.png){fig-align="center" width="200"}](https://raw.githubusercontent.com/rstudio/cheatsheets/main/rmarkdown.pdf)
+[![](images/rmarkdown.png){fig-align="center" width="200"}](https://raw.githubusercontent.com/rstudio/cheatsheets/main/rmarkdown.pdf){target="_blank"}
 
-## Data Visualization: [ggplot2](https://raw.githubusercontent.com/rstudio/cheatsheets/main/data-visualization.pdf)
+## Data Visualization: [ggplot2](https://raw.githubusercontent.com/rstudio/cheatsheets/main/data-visualization.pdf){target="_blank"}
 
-[![](images/ggplot2.png){fig-align="center" width="200"}](https://raw.githubusercontent.com/rstudio/cheatsheets/main/data-visualization.pdf)
+[![](images/ggplot2.png){fig-align="center" width="200"}](https://raw.githubusercontent.com/rstudio/cheatsheets/main/data-visualization.pdf){target="_blank"}
 
 ## Data transformation: dplyr
 
-[![](images/dplyr.png){fig-align="center" width="200"}](https://raw.githubusercontent.com/rstudio/cheatsheets/main/data-transformation.pdf)
+[![](images/dplyr.png){fig-align="center" width="200"}](https://raw.githubusercontent.com/rstudio/cheatsheets/main/data-transformation.pdf){target="_blank"}
 
 ## Data Import: tidyr
 
-[![](images/tidyr.png){fig-align="center" width="200"}](https://posit.co/wp-content/uploads/2022/10/tidyr.pdf)
+[![](images/tidyr.png){fig-align="center" width="200"}](https://posit.co/wp-content/uploads/2022/10/tidyr.pdf){target="_blank"}
 
 ## Style Guide
 
-[The Tidyverse Style Guide](https://style.tidyverse.org/index.html)
+[The Tidyverse Style Guide](https://style.tidyverse.org/index.html){target="_blank"}
