--- a/Day_1/histograms.qmd
+++ b/Day_1/histograms.qmd
@@ -6,6 +6,20 @@ execute:
   echo: true
 ---
 
+## How to Follow Along
+<br>
+Open this presentation in a new browser tab. You can copy and paste code from there.
+
+<br>
+
+Work in the console or in a new .rmd file.
+
+<br>
+
+The .rmd file you can save, the console you cannot.
+
+## Load the Libraries. 
+
 ```{r setup}
 
 library(mosaic)
@@ -29,9 +43,9 @@ Map the unemployment rate for the counties in the US in 2019.
 gf_histogram(~unemployment_rate,data = county)
 ```
 
-## Function arguments
+## Function's arguments
 
-Every function in R can take a lot of arguments. Let's type `?gf_histogram` to see the arguments for that function.
+Every function in R can take a lot of arguments. Let's type <br> `?gf_histogram` to see the arguments for that function.
 
 |                  |              |           |                     |
 |------------------|--------------|-----------|---------------------|
@@ -41,18 +55,18 @@ Every function in R can take a lot of arguments. Let's type `?gf_histogram` to s
 | ...,             | fill,        | ylab,     | stat = "bin",       |
 | bins = 25,       | group,       | title,    | position = "stack", |
 
-## What do these do?
+## Make a pretty histogram. 
 
-Start with the single variable histogram: `gf_histogram(~unemployment_rate,data = county,...)`
+Start with the single variable histogram: `gf_histogram(~unemployment_rate,data = county,...)` and add some arguments. 
 
 ::: incremental
 1.  Edit the `bins` or `binwidth`, which get priority?
 
-2.  Edit `colors` and `fill`. Which tints what? (Hint colors are strings, use quotes) [Here's a list of colors](http://www.stat.columbia.edu/~tzheng/files/Rcolor.pdf)
+2.  Edit `color` and `fill`. Which tints what? (Hint colors are in quotes, color="pink" works) [Here's a list of colors](http://www.stat.columbia.edu/~tzheng/files/Rcolor.pdf)
 
 3.  Add a title and caption. Remove the label from the x-axis add a good one to the y.
 
-4.  What the heck do size, linetype and group do?
+4.  What the heck do size, linetype, and group do?
 :::
 
 ## Here's a graph that I made
@@ -67,7 +81,7 @@ gf_histogram(~unemployment_rate,data=county,bins=10, color="black",fill="purple"
 The histogram is a single variable graph by we can break up the data by grouping it.
 
 ```{r}
-#Take position ="dodge" out
+
 gf_histogram(~unemployment_rate,data=county,bins=10, fill = ~metro)
 ```
 
