--- a/Day_1/day_1_desc_stats_and_viz.qmd
+++ b/Day_1/day_1_desc_stats_and_viz.qmd
@@ -10,13 +10,13 @@ Welcome
 
 [Descriptive Statistics](./descriptive_statistics.html){target="_blank"}
 
--   [Activity 1 with Descriptive Statistics and births14](./Activity_1_Descriptive_Stats/Activity_1.txt){target="_blank"}
+-   [Activity 1 with Descriptive Statistics and births14](./Activity_1_Descriptive_Stats/Activity_1.txt)
 
 Break?
 
 [Histograms and Boxplots](./histograms.html){target="_blank"}
 
--   [Activity 2 with Boxplots and births14](./Activity_2_Boxplots/Boxplots.txt){target="_blank"}
+-   [Activity 2 with Boxplots and births14](./Activity_2_Boxplots/Boxplots.txt)
 
 Break
 
@@ -32,8 +32,8 @@ Lunch
 
 *Solutions*
 
-[Activity 1](./Activity_1_Descriptive_Stats/Solutions_Activity_1.html){target="_blank"}
+[Activity 1](./Activity_1_Descriptive_Stats/Solutions_Activity_1.html)
 
-[Activity 2](./Activity_2_Boxplots/Activity_2_Boxplots_Solutions.html){target="_blank"}
+[Activity 2](./Activity_2_Boxplots/Activity_2_Boxplots_Solutions.html)
 
-[Activity 3](./Activity_3_Categorical_Vars/LAB_WSDay1_SOLUTIONS_Categorical-Data_Scatterplots_Correlation.pdf){target="_blank"}
+[Activity 3](./Activity_3_Categorical_Vars/LAB_WSDay1_SOLUTIONS_Categorical-Data_Scatterplots_Correlation.pdf)
