--- a/Day_1/histograms.qmd
+++ b/Day_1/histograms.qmd
@@ -7,8 +7,8 @@ execute:
 ---
 
 ## How to Follow Along
-<br>
-Open this presentation in a new browser tab. You can copy and paste code from there.
+
+<br> Open this presentation in a new browser tab. You can copy and paste code from there.
 
 <br>
 
@@ -18,7 +18,7 @@ Work in the console or in a new .rmd file.
 
 The .rmd file you can save, the console you cannot.
 
-## Load the Libraries. 
+## Load the Libraries
 
 ```{r setup}
 
@@ -55,9 +55,9 @@ Every function in R can take a lot of arguments. Let's type <br> `?gf_histogram`
 | ...,             | fill,        | ylab,     | stat = "bin",       |
 | bins = 25,       | group,       | title,    | position = "stack", |
 
-## Make a pretty histogram. 
+## Make a pretty histogram
 
-Start with the single variable histogram: `gf_histogram(~unemployment_rate,data = county,...)` and add some arguments. 
+Start with the single variable histogram: `gf_histogram(~unemployment_rate,data = county,...)` and add some arguments.
 
 ::: incremental
 1.  Edit the `bins` or `binwidth`, which get priority?
@@ -95,6 +95,6 @@ gf_histogram(~unemployment_rate|~metro,data = county)
 
 ## Activity:
 
-Open a new .rmd file and copy and paste this code into it.
+Open a new .rmd file and copy and [paste this code into it.](./Activity_2_Boxplots/Boxplots.txt)
 
 [![](/images/new-rmd-file.png){fig-align="center" width="150"}](./images/MTH-142-CheatSheet-v9.pdf)
