--- a/Day_1/to_do.qmd
+++ b/Day_1/to_do.qmd
@@ -64,7 +64,7 @@ We are working on getting you temporary usernames and passwords for HCC Rstudio 
 
 `install.packages("openintro")`
 
-note: its not that hard, but you may experience errors that the rest of the group does get, we'll help you with those.
+note: its not that hard, but you may experience errors that the rest of the group does not get, we'll help you with those.
 
 ## Slack? 
 
